--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-     "name": "australian_greens/au.com.agileware.reservedloc",
+     "name": "australian_greens/au.com.agileware.eventmanagelocations",
      "type": "drupal-module",
-     "description": "AG Repo of CiviCRM au.com.agileware.reservedloc extension",
+     "description": "AG Repo of CiviCRM au.com.agileware.eventmanagelocations extension",
      "require": {
        "composer/installers": "~1.0",
        "drupal/drupal": "~7"
